--- a/_includes/partnershipTable.html
+++ b/_includes/partnershipTable.html
@@ -24,22 +24,26 @@
           {%- assign federal_arr = "" | split: ',' -%}
           {%- assign aboriginal_arr = "" | split: ',' -%}
           {%- assign other_arr = "" | split: ',' -%}
-          {%- assign level = 0 -%}    
-          {%- for govLevels in site.data.partnership -%}
+          {%- assign level = 0 -%} 
+          {%- assign partnership = site.data.partnership -%}
+          {%- if partnership != nil -%}
+            {%- assign partnership = partnership | sort -%}
+          {%- endif -%}   
+          {%- for govLevels in partnership -%}
             {%- assign govLevel = govLevels[0] -%}
             {% for admin in govLevels[1] %}
             {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[0] -%}
             {%- if administration[0] != nil -%}
-              {%- if level == 1 -%}
+              {%- if level == 0 -%}
+                {%- assign aboriginal_arr = aboriginal_arr | push: administration[0]-%}
+              {%- elsif level == 1 -%}
                 {%- assign federal_arr = federal_arr | push: administration[0]-%}
-              {%- elsif level == 4 -%}
-                {%- assign provincial_arr = provincial_arr | push: administration[0]-%}
               {%- elsif level == 2 -%}
                 {%- assign municipal_arr = municipal_arr | push: administration[0]-%}
-              {%- elsif level == 0 -%}
-                {%- assign aboriginal_arr = aboriginal_arr | push: administration[0]-%}
               {%- elsif level == 3 -%}
                 {%- assign other_arr = other_arr | push: administration[0]-%}
+              {%- elsif level == 4 -%}
+                {%- assign provincial_arr = provincial_arr | push: administration[0]-%}
               {%- endif -%}
             {%- endif -%}
             {%- endfor -%}
