--- a/_includes/form/components/admin/new.html
+++ b/_includes/form/components/admin/new.html
@@ -6,4 +6,14 @@
 {% include form/components/admin/orgLevel.html idPreset=include.idPreset title="orgLevel" all=false %}
 {% include form/components/admin/provinceSelect.html idPreset=include.idPreset title="provinceSelect" %}
 {% include form/widgets/string-i18n.html id=id title="newAdminName" param=site.data.forms.param.newAdmin.name -%}
+<div class="form-group">
+<label for="{{ path }}">
+  <span>
+    <span class="field-name">{{ site.data.i18n.form.presets.adminCode.labels.suffix[page.lang] }}</span>
+    <span data-toggle="tooltip" data-placement="top" title="{{ site.data.i18n.form.presets.adminCode.infobulle.suffix[page.lang] }}" class="glyphicon glyphicon-question-sign small" aria-hidden="true"></span>
+  </span>
+</label>
+{%- include form/components/input-group.html id=include.idPreset title="adminCode" group="suffix" param=site.data.forms.param.newAdmin.suffix -%}
+</div>
+<button type="button" class="btn btn-primary" onclick="addMoreSuffixes()"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form.[include.idPreset][title].button.suffix[page.lang] }}</button>
 </div>
