--- a/_includes/dependenciesDashboard.html
+++ b/_includes/dependenciesDashboard.html
@@ -8,7 +8,7 @@
         <div class=row>
             <div class="form-group col-md-6">
               <label for="dt_govLevel">{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</label>
-              <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="8">
+              <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="5">
                 <option value="">&nbsp;</option>
                 {%- for govLevel in site.data.i18n.administrations -%}
                 <option value="{{ govLevel[1].value }}">{{ govLevel[1][page.lang] }}</option>
@@ -39,59 +39,45 @@
 
             <div class="form-group col-md-6">
                 <label for="dt_name">{{ site.data.i18n.tables.projectName[page.lang] }}</label>
-                <select class="form-control" id="dt_name" name="dt_name" data-column="4">
+                <select class="form-control" id="dt_name" name="dt_name" data-column="1">
                   <option value="">&nbsp;</option>
-                  {%- assign licence_arr = "" | split: ',' -%}
+                  {%- assign name_arr = "" | split: ',' -%}
                   {%- for govLevels in site.data.dependencies -%}
                     {%- for admin in govLevels[1] -%}
-                      {%- for dependency in admin[1] -%}
-                      <option value="{{ dependency.name.en }}">{{ dependency.name[page.lang] }}</option>
+                      {%- for releases in admin[1] -%}
+                      {%- for dependencySet in releases[1] -%}
+                      {%- if dependencySet.name != nil -%}
+                      {%- assign name_arr = name_arr | push: dependencySet.name[page.lang] -%}
+                      {%- endif -%}
+                      {%- endfor -%}
                       {%- endfor -%}
                     {%- endfor -%}
+                  {%- endfor -%}
+                  {%- for name in name_arr -%}
+                  <option value="{{ name }}">{{ name }}</option>
                   {%- endfor -%}
                   </select>
               </div>
         </div>
         <div class="row">
             <div class="form-group col-md-6">
-              <label for="dt_team">{{ site.data.i18n.tables.team[page.lang] }}</label>
-              <select class="form-control" id="dt_team" name="dt_team" data-column="6">
+              <label for="dt_team">{{ site.data.i18n.tables.dependencyType[page.lang] }}</label>
+              <select class="form-control" id="dt_type" name="dt_type" data-column="3">
                 <option value="">&nbsp;</option>
-                {%- assign team_arr = "" | split: ',' -%}
-                {%- for govLevels in site.data.code -%}
-                  {%- for admin in govLevels[1] -%}
-                    {%- for release in admin[1].releases -%}
-                      {%- if release.team[page.lang] != nil -%}
-                        {%- assign team_arr = team_arr | push: release.team[page.lang] -%}
-                      {%- endif -%}
-                    {%- endfor -%}
-                  {%- endfor -%}
-                {%- endfor -%}
-                {%- assign team_arr = team_arr | group_by: "" | sort: "name" -%}
-                {%- for team in team_arr -%}
-                  <option value="{{ team.name }}">{{ team.name }}</option>
-                {%- endfor -%}
-              </select>
+                <option value="core">core</option>
+                <option value="dev">dev</option>
+                <option value="peer">peer</option>
+                </select>
             </div>
       
             <div class="form-group col-md-6">
-              <label for="dt_category">{{ site.data.i18n.tables.category[page.lang] }}</label>
-              <select class="form-control" id="dt_category" name="dt_category" data-column="2">
+              <label for="dt_category">{{ site.data.i18n.tables.dependencyOrigin[page.lang] }}</label>
+              <select class="form-control" id="dt_origin" name="dt_origin" data-column="4">
                 <option value="">&nbsp;</option>
-                {%- assign cat_arr = "" | split: ',' -%}
-                {%- for govLevels in site.data.code -%}
-                  {%- for admin in govLevels[1] -%}
-                    {%- for release in admin[1].releases -%}
-                      {%- if release.category != nil -%}
-                        {%- assign cat_arr = cat_arr | push: release.category -%}
-                      {%- endif -%}
-                    {%- endfor -%}
-                  {%- endfor -%}
-                {%- endfor -%}
-                {%- assign cat_arr = cat_arr | uniq -%}
-                {%- for cat in cat_arr -%}
-                  <option value="{{ site.data.i18n.categories[cat][page.lang] }}">{{ site.data.i18n.categories[cat][page.lang] }}</option>
-                {%- endfor -%}
+                <option value="bundler">bundler</option>
+                <option value="composer">composer</option>
+                <option value="npm">npm</option>
+                <option value="pypi">pypi</option> 
               </select>
             </div>
         </div>
@@ -111,68 +97,39 @@
       
       <!-- Data Table -->
       <div class="col-md-12 mrgn-bttm-lg">
-        <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [0,5,6,8,9,10,11,12], "visible": false}], "paging": true}'>
+        <table class="wb-tables table" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [0, 5], "visible": false}], "paging": false}'>
           <thead>
             <tr>
               <th>{{ site.data.i18n.tables.administration[page.lang] }}</th>
               <th>{{ site.data.i18n.tables.projectName[page.lang] }}</th>
-              <th>{{ site.data.i18n.tables.category[page.lang] }}</th>
-              <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
-              <th>{{ site.data.i18n.tables.licence[page.lang] }}(s)</th>
-              <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
-              <th>{{ site.data.i18n.tables.team[page.lang] }}</th>
-              <th>{{ site.data.i18n.tables.codeRepo[page.lang] }}</th>
+              <th>{{ site.data.i18n.tables.dependency[page.lang] }}</th>
+              <th>{{ site.data.i18n.tables.dependencyType[page.lang] }}</th>
+              <th>{{ site.data.i18n.tables.dependencyOrigin[page.lang] }}</th>
               <th>{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</th>
-              <th>{{ site.data.i18n.tables.languages[page.lang] }}</th>
-              <th>{{ site.data.i18n.tables.relatedCode[page.lang] }}</th>
-              <th>{{ site.data.i18n.tables.status[page.lang] }}</th>
-              <th>{{ site.data.i18n.form.presets.date.labels.created[page.lang] }}</th>
             </tr>
           </thead>
           <tbody>
-            {%- for govLevels in site.data.code -%}
+            {%- for govLevels in site.data.dependencies -%}
               {%- assign govLevel = govLevels[0] -%}
               {%- for admin in govLevels[1] -%}
-                {%- for release in admin[1].releases -%}
+                {%- for releases in admin[1] -%}
+                {%- for dependencySet in releases[1] -%}
+                {%- for val in dependencySet.values -%}
+
                 <tr>
-                  {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[0] -%}
+                  {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[0].adminCode -%}
                   <td>{{ administration[0].name[page.lang] }}</td>
       
-                  <td><a href="#{{ release.name[page.lang] | slugify: "latin" }}" aria-controls="{{ release.name[page.lang] | slugify: "latin" }}" class="overlay-lnk" role="button" >{{ release.name[page.lang] }}</a></td>
+                  <td>{{ dependencySet[0].name[page.lang] }}</td>
                   <td>
-                    {{ site.data.i18n.categories[release.category][page.lang] }}
+                    {{ val }}
                   </td>
-                  <td>{{ release.description.whatItDoes[page.lang] }}</td>
-                  <td>
-                    {%- for licence in release.licences -%}
-                      <a href="{{ licence.URL[page.lang] }}" target="_blank">{{ licence.spdxID }}</a>&nbsp;
-                    {%- endfor -%}
-                  </td>
-                  <td>
-                    {%- for tag in release.tags[page.lang] -%}
-                      {{ tag }}&nbsp;
-                    {%- endfor -%}
-                  </td>
-                  <td>{{ release.team[page.lang] }}</td>
-                  <td>
-                    <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
-                      {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
-                    </a>
-                  </td>
+                  <td>{{ dependencySet[0].type }}</td>
+                  <td>{{ dependencySet[0].origin }}</td>
                   <td>{{ site.data.i18n.administrations[govLevel].value }}</td>
-                  <td>
-                    {%- for languages in release.languages -%}
-                      {{ languages }}&nbsp;
-                    {%- endfor -%}
-                  </td>
-                  <td>
-                    {%- for relatedCode in release.relatedCode -%}
-                      <a href= "{{ relatedCode.URL[page.lang] }}">{{ relatedCode.name[page.lang] }}</a>
-                    {%- endfor -%}
-                  </td>
-                  <td>{{ release.status }}&nbsp;</td>
-                  <td>{{ release.date.created }}&nbsp;</td>
-                </tr>
+                  </tr>
+                  {%- endfor -%}
+                  {%- endfor -%}
                 {%- endfor -%}
               {%- endfor -%}
             {%- endfor -%}
