--- a/_includes/dependenciesDashboard.html
+++ b/_includes/dependenciesDashboard.html
@@ -57,7 +57,7 @@
         </div>
         <div class="row">
             <div class="form-group col-md-6">
-              <label for="dt_team">{{ site.data.i18n.tables.dependencyType[page.lang] }}</label>
+              <label for="dt_type">{{ site.data.i18n.tables.dependencyType[page.lang] }}</label>
               <select class="form-control" id="dt_type" name="dt_type" data-column="3">
                 <option value="">&nbsp;</option>
                 <option value="core">core</option>
@@ -67,7 +67,7 @@
             </div>
       
             <div class="form-group col-md-6">
-              <label for="dt_category">{{ site.data.i18n.tables.dependencyOrigin[page.lang] }}</label>
+              <label for="dt_origin">{{ site.data.i18n.tables.dependencyOrigin[page.lang] }}</label>
               <select class="form-control" id="dt_origin" name="dt_origin" data-column="4">
                 <option value="">&nbsp;</option>
                 <option value="bundler">bundler</option>
