* update Exclude meta-tag, add BCP meta-tag

--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -201,7 +201,7 @@
         {%- assign govLevel = govLevels[0] -%}
         {%- for admin in govLevels[1] -%}
           {%- for release in admin[1].releases -%}
-          {%- unless release.tags.en contains site.data_tag -%}
+          {%- unless release.tags.en contains site.exludeTag -%}
           <tr>
             {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[0] -%}
             <td>{{ administration[0].name[page.lang] }}</td>
