--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html class="no-js" lang="{{ page.lang }}" dir="ltr">
 {% include head.html %}
 <body vocab="http://schema.org/" typeof="WebPage" class="page-{{ page.ref }}">
