changing default show sequence for items in grid

--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -181,7 +181,7 @@
   <div id="designlayout_wrapper" class="dataTables_wrapper no-footer">
   <table class="wb-tables tbl-gridify dataTable no-footer"
           id="dataset-filter"
-          data-wb-tables='{"order": [0, "asc"], "bPaginate": false, "columnDefs": [{"targets": [0,5,6,8,9,10,11,12], "visible": false}], "paging": true}'
+          data-wb-tables='{"order": [0, "asc"], "bPaginate": false, "columnDefs": [{"targets": [0,5,6,8,9,10,11,12], "visible": false}], "paging": true, "lengthMenu": [12,24,48,96]}'
           role="grid"
           style="width: 0px;">
     <thead>
